<resources>
    <string name="app_name">Weather Forecast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_monday">Monday</string>
    <string name="txt_winds">22km/h</string>
    <string name="txt_temp_info">Clouds</string>
    <string name="txt_temprature">28</string>
    <string name="txt_temp_range">"28     30"</string>
    <string name="go_to_details">Go to Details</string>

    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="click_here">Click here</string>

    <string name="text_detail_forecast_by_location">Here you can find more detail about the your current location city forecast. We have organize next 5 days forecast for you.</string>
    <string name="text_detail_forecast_by_cities">Here you can search forecast for multiple cities from a provided list.</string>
    <string name="search_hint">Search by cities</string>
    <string name="select_cities">Select Cities</string>
    <string name="search_forecast">SEARCH FORECAST</string>
    <string name="validation_msg">Min: 3, Max: 7</string>
    <string name="forecast_by_cities">Forecast by cities</string>

</resources>
