<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <import type="android.view.View"/>

        <variable
            name="locationForecastListItemViewModel"
            type="com.maqsood007.weatherforecast.ui.forcasts.current_location.LocationForecastListItemViewModel" />

        <variable
            name="dayDataAdapter"
            type="com.maqsood007.weatherforecast.ui.forcasts.current_location.adapter.LocationForecastListDayAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:gravity="start"
            android:minLines="1"
            android:text="@{locationForecastListItemViewModel.dayName}"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/dayRecycleView"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/day_monday" />


        <TextView
            android:id="@+id/tvWinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@{locationForecastListItemViewModel.winds}"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            tools:text="@string/txt_winds" />

        <TextView
            android:id="@+id/tvForecastInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:minLines="1"
            android:text="@{locationForecastListItemViewModel.description}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/dayRecycleView"
            app:layout_constraintEnd_toStartOf="@+id/tvTemprature"
            app:layout_constraintStart_toEndOf="@+id/tvIconTemp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_temp_info" />


        <TextView
            android:id="@+id/tvTemprature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@{locationForecastListItemViewModel.temprature}"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/dayRecycleView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_temprature" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWinds" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/wind_icon_size"
            android:layout_height="@dimen/wind_icon_size"
            app:layout_constraintBottom_toTopOf="@+id/dayRecycleView"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_winds" />

        <ImageView
            android:id="@+id/tvIconTemp"
            android:layout_width="@dimen/temp_info_size"
            android:layout_height="@dimen/temp_info_size"
            android:layout_marginStart="8dp"
            app:imageUrl="@{locationForecastListItemViewModel.imgCloud}"
            app:layout_constraintBottom_toTopOf="@+id/dayRecycleView"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dayRecycleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/white_with_opacity"
            android:visibility="@{locationForecastListItemViewModel.childVisibility, default = gone}"
            app:adapter="@{dayDataAdapter}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>