<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    
    <data>
        
        <variable
            name="landingViewModel"
            type="com.maqsood007.weatherforecast.ui.forcasts.WeatherForecastViewModel" />
        
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weather_bg"
        tools:context=".ui.landing.ForecastLandingFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.50121653"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTemprature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_temprature"
            android:textSize="@dimen/_50sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_temprature" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_temprature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvTemprature"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvWinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_temprature"
            app:layout_constraintBottom_toBottomOf="@+id/tvTemprature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvTemRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_temprature"
            app:layout_constraintBottom_toTopOf="@+id/tvWinds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvLocationForecastBox"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/rounded_corner"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/text_detail_forecast_by_location"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/tvCityForecastBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/tvCityForecastBox"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/rounded_corner"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/text_detail_forecast_by_cities"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationForecastBox" />

        <Button
            android:id="@+id/btnCurrentTempDetails"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:text="@string/go_to_details"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLocationForecastBox"
            app:layout_constraintEnd_toEndOf="@+id/tvLocationForecastBox"
            tools:text="@string/go_to_details" />

        <Button
            android:id="@+id/btnCityTempDetails"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:text="@string/go_to_details"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCityForecastBox"
            app:layout_constraintEnd_toEndOf="@+id/tvCityForecastBox"
            tools:text="@string/go_to_details" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.40218878"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>